[tool.poetry]
name = "pythonprojectbiumelodykasher"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.10,<3.15"
streamlit = "^1.53.0"
requests = "^2.32.5"
plotly = "^6.5.2"
matplotlib = "^3.10.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
